--- a/chamber/join.html
+++ b/chamber/join.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="description"
-        content="Conor Kekauoha - WDD 230 - Web Frontend Development - This page is for an assignment">
+        content="Conor Kekauoha - WDD 230 - Web Frontend Development - Chamber of Commerce Join Page">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Conor Kekauoha">
     <meta property="og:title" content="Conor Kekauoha's website for WDD-230">
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/medium.css">
     <link rel="stylesheet" href="styles/larger.css">
-    <title>Conor Kekauoha - WDD 230 - Web Frontend Development</title>
+    <title>Conor Kekauoha - WDD 230 - Web Frontend Development - Chamber of Commerce Join Page</title>
 </head>
 
 <body>
