--- a/chamber/join.html
+++ b/chamber/join.html
@@ -71,7 +71,8 @@
                 </label>
                 <label for="membership-level">Membership Level:
                     <select id="membership-level" name="membership-level" required>
-                        <option value="non-profit">NP Membership (Non-Profit, Free)</option>
+                        <option value="" disabled selected>-- Select Membership Level --</option>
+                        <option value="NP">NP Membership (Non-Profit, Free)</option>
                         <option value="Bronze">Bronze Membership</option>
                         <option value="Silver">Silver Membership</option>
                         <option value="Gold">Gold Membership</option>
