--- a/chamber/join.html
+++ b/chamber/join.html
@@ -43,7 +43,7 @@
     <main class="main">
         <form id="membership-form" method="get" action="thankyou.html">
             <fieldset>
-                <legend>Membership Form</legend>
+                <legend><strong>Membership Form</strong></legend>
 
                 <label for="first-name">First Name:
                     <input type="text" id="first-name" name="first-name" required>
