edited css and html

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -43,7 +43,7 @@
     <main>
         <aside id="sidebar">
             <section>
-                <h1>Discover Manhattan Beach</h1>
+                <h2>Discover Manhattan Beach</h2>
             </section>
             <section id="visitMessage"></section>
             <section>
@@ -70,12 +70,19 @@
             </section>
         </aside>
         <div id="gallery">
-            <img src="images/MB-img1.jpeg" alt="Sunset over Manhattan Beach Pier" loading="lazy">
-            <img src="images/MB-img2.jpg" alt="Manhattan Beach Pier bird's eye view" loading="lazy">
-            <img src="images/MB-img3.webp" alt="Manhattan Beach Pier" loading="lazy">
-            <img src="images/MB-img4.webp" alt="Sunset at Manhattan Beach Pier" loading="lazy">
-            <img src="images/MB-img5.webp" alt="Picture down Manhattan Beach blvd from Highland" loading="lazy">
-            <img src="images/MB-img6.webp" alt="Manhattan Village at night from above" loading="lazy">
+            <img src="images/sunest-over-mb-pier.webp" alt="Sunset over Manhattan Beach Pier" loading="lazy">
+            <figcaption>Sunset over Manhattan Beach Pier</figcaption>
+            <img src="images/mb-pier-birdseyeview.webp" alt="Manhattan Beach Pier bird's eye view" loading="lazy">
+            <figcaption>Manhattan Beach Pier bird's eye view</figcaption>
+            <img src="images/mb-pier.webp" alt="Manhattan Beach Pier" loading="lazy">
+            <figcaption>Manhattan Beach Pier, looking inland</figcaption>
+            <img src="images/sunset-at-mb-pier.webp" alt="Sunset at Manhattan Beach Pier" loading="lazy">
+            <figcaption>Sunset at Manhattan Beach Pier</figcaption>
+            <img src="images/mb-from-highland.webp" alt="Picture down Manhattan Beach blvd from Highland"
+                loading="lazy">
+            <figcaption>Picture down Manhattan Beach blvd from Highland</figcaption>
+            <img src="images/manhattan-village.webp" alt="Manhattan Village at night from above" loading="lazy">
+            <figcaption>Manhattan Village at night from above</figcaption>
         </div>
     </main>
     <footer>
