--- a/index.html
+++ b/index.html
@@ -91,7 +91,8 @@
                         Activity</a> | <a href="form.html">Form Build</a>
                 </li>
                 <li>
-                    09: <a href="lesson09/new-ward-members.json">JSON Activity</a>
+                    09: <a href="lesson09/new-ward-members.json">JSON Activity</a> | <a
+                        href="lesson09/prophets.html">Latter-day Prophets Activity</a>
                 </li>
                 <li>
                     10: <a href=""></a>
