--- a/index.html
+++ b/index.html
@@ -79,20 +79,22 @@
                     05: <a href="lesson05/bom.html" target="_blank">BoM Favorite Chapters</a>
                 </li>
                 <li>
-                    06: <a href="lesson06/images/landscape.webp">WebP</a> | <a
-                        href="lesson06/responsize-images.html">Responsive Images</a>
+                    06: <a href="lesson06/images/landscape.webp" target="_blank">WebP</a> | <a
+                        href="lesson06/responsize-images.html" target="_blank">Responsive Images</a>
                 </li>
                 <li>
-                    07: <a href="lesson07/lazyload.html">Lazy loading</a> | <a href="lesson07/bom.html">Enhanced BOM
+                    07: <a href="lesson07/lazyload.html" target="_blank">Lazy loading</a> | <a href="lesson07/bom.html"
+                        target="_blank">Enhanced BOM
                         activity</a>
                 </li>
                 <li>
-                    08: <a href="lesson08/tablebuild.html">Table Build Activity</a> | <a href="form.html">Form
-                        Activity</a> | <a href="form.html">Form Build</a>
+                    08: <a href="lesson08/tablebuild.html" target="_blank">Table Build Activity</a> | <a
+                        href="form.html" target="_blank">Form
+                        Activity</a> | <a href="form.html" target="_blank">Form Build</a>
                 </li>
                 <li>
-                    09: <a href="lesson09/new-ward-members.json">JSON Activity</a> | <a
-                        href="lesson09/prophets.html">Latter-day Prophets Activity</a>
+                    09: <a href="lesson09/new-ward-members.json" target="_blank">JSON Activity</a> | <a
+                        href="lesson09/prophets.html" target="_blank">Latter-day Prophets Activity</a>
                 </li>
                 <li>
                     10: <a href=""></a>
