--- a/index.html
+++ b/index.html
@@ -56,7 +56,10 @@
         </div>
         <section class="card">
             <h3>Learning Activities</h3>
-            <ul>
+            <ul id="dynamic-links">
+                <!-- Links will be populated here dynamically -->
+            </ul>
+            <!-- <ul>
                 <li>
                     01: <a href="">Activity 1</a>
                 </li>
@@ -99,7 +102,7 @@
                 <li>
                     10: <a href=""></a>
                 </li>
-            </ul>
+            </ul> -->
         </section>
 
         <section class="card">
@@ -120,6 +123,7 @@
     <script src="scripts/getdates.js"></script>
     <script src="scripts/hamburger-menu.js"></script>
     <script src="scripts/visitCounter.js"></script>
+    <script src="scripts/links.js"></script>
 </body>
 
 </html>
