add json & html

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     01: <a href="">Activity 1</a>
                 </li>
                 <li>
-                    02: <a href="lesson02/design-principles.html" target="_blank">Lesson 02 | Design Principles</a>
+                    02: <a href="lesson02/design-principles.html" target="_blank">Design Principles</a>
                 </li>
                 <li>
                     03: <a href="lesson03/images/w3schools-exercise.png" target="_blank">Combinator
