--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="description"
-        content="Conor Kekauoha - WDD 230 - Web Frontend Development - This page is for the Chamber of Commerce">
+        content="Conor Kekauoha - WDD 230 - Web Frontend Development - This page is for those who are looking to discover more about Manhattan Beach.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Conor Kekauoha">
     <meta property="og:title" content="Conor Kekauoha's Chamber of Commerce and Discover Page for WDD-230">
@@ -22,7 +22,7 @@
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/medium.css">
     <link rel="stylesheet" href="styles/larger.css">
-    <title>Manhattan Beach Chamber of Commerce and Discover Page</title>
+    <title>Manhattan Beach Chamber of Commerce Discover Page</title>
 </head>
 
 <body>
@@ -62,12 +62,12 @@
                 <h2>Attractions</h2>
                 <p>Beach Activities</p>
             </section>
-            <section>
+            <!-- <section>
                 <h2>Calendar</h2>
                 <iframe
                     src="https://calendar.google.com/calendar/embed?src=549a302d26bf07a36e92a9c691a9d3996b12a3021fa0ee2f76dd686c7ab82091%40group.calendar.google.com&ctz=America%2FLos_Angeles"
                     style="border: 0" width="600" height="400" frameborder="0" scrolling="no"></iframe>
-            </section>
+            </section>  -->
         </aside>
         <div id="gallery">
             <img src="images/sunest-over-mb-pier.webp" alt="Sunset over Manhattan Beach Pier" loading="lazy">
