add css and html

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="description"
-        content="Conor Kekauoha - WDD 230 - Web Frontend Development - This page is for the Chamber of Commerce">
+        content="View the members of the Manhattan Beach Chamber of Commerce, including business names, contact information, and membership levels.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Conor Kekauoha">
     <meta property="og:title" content="Conor Kekauoha's Chamber of Commerce website for WDD-230">
@@ -22,10 +22,10 @@
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/medium.css">
     <link rel="stylesheet" href="styles/larger.css">
-    <title>Manhattan Beach Chamber of Commerce</title>
+    <title>Member Directory - Manhattan Beach Chamber of Commerce</title>
 </head>
 
-<body>
+<body id="directory-page">
     <header>
         <h1>Manhattan Beach Chamber of Commerce</h1>
         <label class="switch">
@@ -49,7 +49,6 @@
     </main>
     <footer>
         <p>&copy; <span id="year">year</span> Manhattan Beach Chamber of Commerce</p>
-
         <p>
             Conor Kekauoha | Project for WDD230 | (123) 456-7890 | conork@randomemail.com
         </p>
