add html, css, and js

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -25,7 +25,7 @@
     <title>Member Directory - Manhattan Beach Chamber of Commerce</title>
 </head>
 
-<body id="directory-page">
+<body>
     <header>
         <h1>Manhattan Beach Chamber of Commerce</h1>
         <label class="switch">
@@ -36,7 +36,7 @@
         <nav class="navigation">
             <a href="index.html">Home</a>
             <a href="discover.html">Discover</a>
-            <a href="#">Directory</a>
+            <a href="directory.html">Directory</a>
             <a href="join.html">Join</a>
         </nav>
     </header>
