--- a/chamber/index.html
+++ b/chamber/index.html
@@ -55,9 +55,12 @@
         </section>
         <section class="card">
             <h2>Weather</h2>
-            <p>Temperature: <span id="temp">35</span>°F</p>
-            <p>Wind Speed: <span id="windSpeed">15</span> mph</p>
-            <p id="windChill">Wind Chill: Calculating...</p>
+            <p>Current Temperature: <span id="current-temp"></span></p>
+            <p>Weather Description: <span id="weather-desc"></span></p>
+            <p>3-Day Forecast:</p>
+            <ul id="forecast">
+                <!-- Forecast items will be inserted here -->
+            </ul>
         </section>
         <section class="card">
             <h2>Spotlight</h2>
@@ -90,7 +93,8 @@
     <script src="scripts/getdates.js"></script>
     <script src="scripts/hamburger-menu.js"></script>
     <script src="scripts/darkmode.js"></script>
-    <script src="scripts/windchill.js"></script>
+    <script src="scripts/weather.js"></script>
+    <script src="scripts/banner.js"></script>
 </body>
 
 </html>
