created and added html, css, js, and images to scoots project

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -61,4 +61,10 @@
     <script src="scripts/directory.js"></script>
 </body>
 
+<ol>
+    <li>CSS</li>
+    <li>HTML</li>
+    <li>JavaScript</li>
+</ol>
+
 </html>
