--- a/index.html
+++ b/index.html
@@ -56,53 +56,7 @@
         </div>
         <section class="card">
             <h3>Learning Activities</h3>
-            <ul id="dynamic-links">
-                <!-- Links will be populated here dynamically -->
-            </ul>
-            <!-- <ul>
-                <li>
-                    01: <a href="">Activity 1</a>
-                </li>
-                <li>
-                    02: <a href="lesson02/design-principles.html" target="_blank">Design Principles</a>
-                </li>
-                <li>
-                    03: <a href="lesson03/images/w3schools-exercise.png" target="_blank">Combinator
-                        exercise</a> | <a href="https://codepen.io/conorkek/pen/mdNeYgW" target="_blank">CodePen CSS
-                        Psuedo
-                        Elements
-                        Activity</a> | <a href="https://codepen.io/conorkek/pen/YzmwaMY" target="_blank">CodePen
-                        Hamburger
-                        Activity</a>
-                </li>
-                <li>
-                    04: <a href="https://codepen.io/conorkek/pen/LYwRqGz" target="_blank">CodePen CSS Pseudo-Classes</a>
-                </li>
-                <li>
-                    05: <a href="lesson05/bom.html" target="_blank">BoM Favorite Chapters</a>
-                </li>
-                <li>
-                    06: <a href="lesson06/images/landscape.webp" target="_blank">WebP</a> | <a
-                        href="lesson06/responsize-images.html" target="_blank">Responsive Images</a>
-                </li>
-                <li>
-                    07: <a href="lesson07/lazyload.html" target="_blank">Lazy loading</a> | <a href="lesson07/bom.html"
-                        target="_blank">Enhanced BOM
-                        activity</a>
-                </li>
-                <li>
-                    08: <a href="lesson08/tablebuild.html" target="_blank">Table Build Activity</a> | <a
-                        href="form.html" target="_blank">Form
-                        Activity</a> | <a href="form.html" target="_blank">Form Build</a>
-                </li>
-                <li>
-                    09: <a href="lesson09/new-ward-members.json" target="_blank">JSON Activity</a> | <a
-                        href="lesson09/prophets.html" target="_blank">Latter-day Prophets Activity</a>
-                </li>
-                <li>
-                    10: <a href=""></a>
-                </li>
-            </ul> -->
+            <ul id="dynamic-links"></ul>
         </section>
 
         <section class="card">
