--- a/scoots/index.html
+++ b/scoots/index.html
@@ -19,6 +19,7 @@
         rel="stylesheet">
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
+    <link rel="stylesheet" href="styles/larger.css">
     <title>~Scoots~ Home Page</title>
 </head>
 
@@ -29,12 +30,16 @@
     </div>
     <header>
         <h1>~Scoots~</h1>
-        <nav>
+        <div id="hamburger" onclick="toggleMenu()">
+            &#9776;
+        </div>
+        <nav id="nav-menu" class="hidden">
             <a href="index.html">Home</a>
             <a href="rentals.html">Rentals</a>
             <a href="reservations.html">Reservations</a>
             <a href="contact.html">Contact</a>
         </nav>
+    </header>
     </header>
     <main>
         <section id="hero">
@@ -50,6 +55,7 @@
         <p>Follow us: [Social Media Links]</p>
     </footer>
     <script src="scripts/weather.js"></script>
+    <script src="scripts/hamburger-menu.js"></script>
 </body>
 
 </html>
