--- a/scoots/contact.html
+++ b/scoots/contact.html
@@ -25,9 +25,7 @@
 <body>
     <header>
         <h1>~Scoots~ Contact Us</h1>
-        <div id="hamburger" onclick="toggleMenu()">
-            &#9776;
-        </div>
+        <div id="hamburger" onclick="toggleMenu()">&#9776;</div>
         <nav id="nav-menu" class="hidden">
             <a href="index.html">Home</a>
             <a href="rentals.html">Rentals</a>
@@ -35,21 +33,67 @@
             <a href="contact.html">Contact</a>
         </nav>
     </header>
-    </header>
+
     <main>
         <section>
-            <h2>Contact Information</h2>
-            <p>Email: contact@scoots.com</p>
-            <p>Phone: +52 123-456-7890</p>
-            <div id="map">
-                <!-- Google Maps Embed -->
+            <h2>Essential Contact Information</h2>
+            <p><strong>Email:</strong> info@scootscozumel.com</p>
+            <p><strong>Phone:</strong> +52 987 555 1234</p>
+            <p><strong>Locations:</strong></p>
+            <ul>
+                <li><strong>Centro Location:</strong> Near Playa del Carmen-Cozumel Ferry Dock</li>
+                <li><strong>Terminal Puerta Maya:</strong> South Cozumel, near the cruise lines</li>
+            </ul>
+        </section>
+
+        <section>
+            <h2>Find Us Here</h2>
+            <!-- Centro Location -->
+            <h3>Centro Location: Playa del Carmen-Cozumel Ferry Dock</h3>
+            <div class="map-container">
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3756.205016303807!2d-86.94632359999999!3d20.5116364!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f4e433bf4712b3d%3A0x3bcbb87682b46d48!2sPlaya%20del%20Carmen-Cozumel%20Ferry%20Dock!5e0!3m2!1sen!2sus!4v1234567890"
+                    width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            </div>
+
+            <!-- Terminal Puerta Maya -->
+            <h3>Terminal Puerta Maya: Cruise Line Location</h3>
+            <div class="map-container">
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3756.1065133127793!2d-86.9576008!3d20.4764836!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f4e43e621db4567%3A0x3c8e72b49e4e39ea!2sTerminal%20Puerta%20Maya!5e0!3m2!1sen!2sus!4v1234567891"
+                    width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
             </div>
         </section>
+
+        <section>
+            <h2>Contact Us</h2>
+            <form id="contact-form" novalidate>
+                <div class="form-container">
+                    <div class="form-group">
+                        <label for="name">Name: <span class="required">*</span></label>
+                        <input type="text" id="name" name="name" placeholder="Your Full Name" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="email">Email: <span class="required">*</span></label>
+                        <input type="email" id="email" name="email" placeholder="example@example.com" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="comment">Comment: <span class="required">*</span></label>
+                        <textarea id="comment" name="comment" rows="4" placeholder="Your message..."
+                            required></textarea>
+                    </div>
+                    <button type="submit">Send Message</button>
+                </div>
+            </form>
+        </section>
     </main>
+
     <footer>
-        <p>Follow us: [Social Media Links]</p>
+        <p>Explore Cozumel your way!</p>
     </footer>
+
     <script src="scripts/hamburger-menu.js"></script>
+    <script src="scripts/contact-form.js"></script>
 </body>
 
 </html>
