--- a/scoots/reservations.html
+++ b/scoots/reservations.html
@@ -108,7 +108,7 @@
     </footer>
 
     <script src="scripts/hamburger-menu.js"></script>
-    <script src="scripts/form.js"></script>
+    <script src="scripts/reservation-form.js"></script>
 </body>
 
 </html>
