edited html and css and added hero image

--- a/scoots/index.html
+++ b/scoots/index.html
@@ -42,9 +42,12 @@
     </header>
     </header>
     <main>
-        <section id="hero">
-            <h2>Explore Cozumel with Ease</h2>
-            <button onclick="location.href='reservations.html'">Reserve Now</button>
+        <section class="hero">
+            <img src="images/hero.webp" alt="Hero Image" class="hero-image">
+            <div class="hero-content">
+                <h2>Explore Cozumel</h2>
+                <a href="reservations.html" class="hero-button">Reserve Now</a>
+            </div>
         </section>
         <section id="weather">
             <h3>Current Weather</h3>
