--- a/scoots/contact.html
+++ b/scoots/contact.html
@@ -87,13 +87,26 @@
             </form>
         </section>
     </main>
-
     <footer>
-        <p>Explore Cozumel your way!</p>
+        <div class="footer-container">
+            <div class="footer-info">
+                <p>&copy; 2024 ~Scoots~ All rights reserved.</p>
+                <p>Last Edited: <span id="last-edit">April 1, 2024</span></p>
+                <p><strong>Contact Us:</strong></p>
+                <ul>
+                    <li>Phone: +52 987 555 1234</li>
+                    <li>Email: <a href="mailto:info@scootscozumel.com">info@scootscozumel.com</a></li>
+                    <li>Address: Centro Location, Cozumel, Mexico</li>
+                </ul>
+            </div>
+            <div class="footer-back">
+                <a href="#top" class="back-to-top">Back to Top ↑</a>
+            </div>
+        </div>
     </footer>
-
     <script src="scripts/hamburger-menu.js"></script>
     <script src="scripts/contact-form.js"></script>
+    <script src="scripts/get-date.js"></script>
 </body>
 
 </html>
