--- a/scoots/index.html
+++ b/scoots/index.html
@@ -24,15 +24,15 @@
 </head>
 
 <body>
+    <!-- Closeable Message at Top -->
     <div id="top-message">
         <span id="high-temp"></span>
         <button onclick="closeMessage()">Close</button>
     </div>
+
     <header>
         <h1>~Scoots~</h1>
-        <div id="hamburger" onclick="toggleMenu()">
-            &#9776;
-        </div>
+        <div id="hamburger" onclick="toggleMenu()">&#9776;</div>
         <nav id="nav-menu" class="hidden">
             <a href="index.html">Home</a>
             <a href="rentals.html">Rentals</a>
@@ -40,8 +40,9 @@
             <a href="contact.html">Contact</a>
         </nav>
     </header>
-    </header>
+
     <main>
+        <!-- Hero Section -->
         <section class="hero">
             <img src="images/hero.webp" alt="Hero Image" class="hero-image">
             <div class="hero-content">
@@ -49,6 +50,8 @@
                 <a href="reservations.html" class="hero-button">Reserve Now</a>
             </div>
         </section>
+
+        <!-- Weather Section -->
         <section class="weather">
             <h2>Current Weather in Cozumel</h2>
             <div class="weather-card">
@@ -60,18 +63,58 @@
                     </div>
                 </div>
                 <div class="weather-details">
-                    <p>Current Temp: <span id="current-temp">--°C</span></p>
+                    <p>Current Temp: <span id="current-temp">--°F</span></p>
                     <p>Humidity: <span id="humidity">--%</span></p>
-                    <p>Tomorrow at 3 PM: <span id="forecast-temp">--°C</span></p>
+                    <p>Tomorrow at 3 PM: <span id="forecast-temp">--°F</span></p>
                 </div>
+            </div>
+        </section>
+
+        <!-- Summary of Rental Options -->
+        <section class="rentals-summary">
+            <h2>Our Rental Options</h2>
+            <ul>
+                <li>Honda Metropolitan (49cc) - 1 person</li>
+                <li>Honda Dio (110cc) - 2 person</li>
+                <li>Honda PCX150 (149cc) - 2 person</li>
+                <li>Honda Pioneer ATV - 4 person</li>
+                <li>Jeep Wrangler (4-Door with A/C) - 5 person</li>
+                <li>Jeep Wrangler (2-Door Open Air) - 4 person</li>
+            </ul>
+            <p><a href="rentals.html" class="cta-link">View All Rentals</a></p>
+        </section>
+
+        <!-- Social Media Links -->
+        <section class="social-media">
+            <h2>Follow Us!</h2>
+            <div class="social-icons">
+                <a href="https://facebook.com" target="_blank">Facebook</a> |
+                <a href="https://instagram.com" target="_blank">Instagram</a> |
+                <a href="https://twitter.com" target="_blank">Twitter</a>
             </div>
         </section>
     </main>
     <footer>
-        <p>Follow us: [Social Media Links]</p>
+        <div class="footer-container">
+            <div class="footer-info">
+                <p>&copy; 2024 ~Scoots~ All rights reserved.</p>
+                <p>Last Edited: <span id="last-edit">April 1, 2024</span></p>
+                <p><strong>Contact Us:</strong></p>
+                <ul>
+                    <li>Phone: +52 987 555 1234</li>
+                    <li>Email: <a href="mailto:info@scootscozumel.com">info@scootscozumel.com</a></li>
+                    <li>Address: Centro Location, Cozumel, Mexico</li>
+                </ul>
+            </div>
+            <div class="footer-back">
+                <a href="#top" class="back-to-top">Back to Top ↑</a>
+            </div>
+        </div>
     </footer>
     <script src="scripts/weather.js"></script>
     <script src="scripts/hamburger-menu.js"></script>
+    <script src="scripts/top-message.js"></script>
+    <script src="scripts/get-date.js"></script>
 </body>
 
 </html>
