Final edits to js, css, and html

--- a/scoots/index.html
+++ b/scoots/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="WDD 230 - Web Frontend Development - Final Project">
+    <meta name="description" content="WDD 230 - Final Project - Scoots Home Page">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Conor Kekauoha">
     <meta property="og:title" content="Conor Kekauoha's Final Project for WDD-230">
