--- a/scoots/contact.html
+++ b/scoots/contact.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/larger.css">
+    <title>~Scoots~ Contact Page</title>
 </head>
 
 <body>
@@ -53,7 +54,7 @@
             <div class="map-container">
                 <iframe
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3756.205016303807!2d-86.94632359999999!3d20.5116364!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f4e433bf4712b3d%3A0x3bcbb87682b46d48!2sPlaya%20del%20Carmen-Cozumel%20Ferry%20Dock!5e0!3m2!1sen!2sus!4v1234567890"
-                    width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                    width="auto" height="400" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
             </div>
 
             <!-- Terminal Puerta Maya -->
@@ -61,7 +62,7 @@
             <div class="map-container">
                 <iframe
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3756.1065133127793!2d-86.9576008!3d20.4764836!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f4e43e621db4567%3A0x3c8e72b49e4e39ea!2sTerminal%20Puerta%20Maya!5e0!3m2!1sen!2sus!4v1234567891"
-                    width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                    width="auto" height="400" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
             </div>
         </section>
 
