--- a/scoots/index.html
+++ b/scoots/index.html
@@ -56,7 +56,7 @@
             <h2>Current Weather in Cozumel</h2>
             <div class="weather-card">
                 <div class="weather-main">
-                    <img id="weather-icon" src="" alt="Weather Icon" />
+                    <img id="weather-icon" alt="Weather Icon">
                     <div>
                         <p id="weather-title">Loading...</p>
                         <p id="weather-description">Please wait...</p>
