--- a/scoots/rentals.html
+++ b/scoots/rentals.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/larger.css">
+    <title>~Scoots~ Rental Page</title>
 </head>
 
 <body>
